# steenroder_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README.rst
docs/: CMakeLists.txt  Doxyfile
examples/: cone_rp2.phat  cone_rp3.phat  cone_rp4.phat  rp2.phat  rp3.phat  rp4.phat  rp4_dualized.phat
include/steenroder/: abstract_pivot_column.hpp  args_parser.hpp  attribute_matrix.hpp  bars.hpp  bit_tree_column.hpp  boundary_matrix.hpp  commons.hpp  homology.hpp  input_output.hpp  matrix_vector.hpp  options.hpp  reader.hpp  reduction.hpp  simplex_matrix.hpp  sorted_bars.hpp  sorted_homology.hpp  sorted_matrix.hpp  sparse_matrix.hpp  steenrod.hpp  thread_local_storage.h  vector_column.hpp  writer.hpp
src/: CMakeLists.txt  barcodes.cpp  dualize.cpp  input.in
tests/: CMakeLists.txt
